# pheval.lirical

./: README.md  config.yaml  pyproject.toml  tox.ini
src/pheval_lirical/: cli.py  config_parser.py  runner.py  tool_specific_configurations.py
src/pheval_lirical/post_process/: post_process.py  post_process_results_format.py
src/pheval_lirical/prepare/: prepare_commands.py  prepare_manual_commands.py  prepare_phenopacket_commands.py
src/pheval_lirical/run/: run.py
tests/: test_cli.py  test_post_process_results_format.py  test_prepare_commands.py
