[tool.poetry]
name = "pheval-lirical"
version = "0.1.0"
description = ""
authors = ["Yasemin Bridges <y.bridges@qmul.ac.uk>"]
readme = "README.md"
packages = [{include = "pheval_lirical", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pyserde = "^0.9.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.15.6"
coverage = "^7.1.0"

[tool.poetry.scripts]
pheval-exomiser = "pheval_lirical.cli:main"

[tool.poetry.plugins."pheval.plugins"]
exomiser = "pheval_lirical.runner:LiricalPhEvalRunner"


[tool.black]
line-length = 100
target-version = ["py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
